# wowblog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  reset_passwords_to_bcrypt.py  run.py
backend/alembic/: env.py
backend/alembic/versions/: cd6757a448f8_baseline.py
backend/app/: database.py  exceptions.py  main.py
backend/app/config/: oauth.py
backend/app/crud/: admin_comments.py  article_views.py  articles.py  category.py  comments.py  doc.py  docbook.py  member_invitations.py  navs.py  notifications.py  pages.py  series.py  siteconfig.py  tags.py  user_oauth.py  users.py
backend/app/dependencies/: authentication.py
backend/app/internal/: admin.py  articles.py  upload.py
backend/app/logs/: .gitkeep
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: admin_comments.py  response.py
backend/app/models/data/: article_views.py  articles.py  category.py  comments.py  docs.py  member_invitations.py  navs.py  notifications.py  pages.py  series.py  siteconfig.py  tags.py  user_oauth.py  users.py
backend/app/models/schemas/: admin_comments.py  article_views.py  articles.py  category.py  comments.py  docs.py  member_invitations.py  navs.py  notifications.py  oauth.py  pages.py  series.py  siteconfig.py  tags.py  users.py
backend/app/routers/: admin_comments.py  auth.py  blog.py  doc.py  docbook.py  media.py  member_invitations.py  notifications.py  users.py  websocket.py
backend/app/services/: doc_service.py  docbook_service.py  email_service.py  message_push_service.py  notification_service.py
backend/app/uploads/: .gitkeep
backend/app/utils/: auth.py  location.py  logger.py  notify.py  response.py  roles.py
backend/app/utils/oauth_providers/: __init__.py  apple.py  base.py  github.py  google.py
backend/app/websocket/: __init__.py  manager.py
backend/docker/mysql/init/: .gitkeep
backend/docker/nginx/: nginx.conf
backend/docker/nginx/ssl/: README.md
backend/docs/: DEPLOYMENT.md  README.md  宝塔面板部署.md
backend/migrations/: wowblog.sql
backend/tests/: conftest.py  test_api.py  test_articles_crud.py  test_auth.py  test_utils.py  test_websocket.py
frontend/: .env.example  .gitignore  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: PROJECT_OVERVIEW.md  article-recommendation-api.md  宝塔面板部署.md  文档模块开发文档.md  文档模块设计方案.md  用户登录方案.md
frontend/src/: App.vue  main.ts
frontend/src/api/: README.md  http.ts  index.ts  types.ts
frontend/src/components/: CategoryMobileTree.vue  ForgetPasswordDialog.vue  IconIfy.vue  InviteDrawer.vue  MarkdownEditor.vue  MobileNavMenu.vue  NotificationPanel.vue  PlaceholderImage.vue  SimpleEditor.vue  SiteFooter.vue  SiteNav.vue  SiteNav.vue.bak  SlashEditor.vue  TiptapEditor.vue
frontend/src/composables/: useMessagePush.ts  useMobileDetection.ts
frontend/src/data/: china-area.json  world-area.json
frontend/src/extensions/: custom-commands.ts  douyin.ts  image-aligned.ts  mention.ts  (+4 more)
(+197 files in other folders)
